3607.	[bug]		dnssec-keygen had broken 'Invalid keyfile' error
			message. [RT #34045]

	--- 9.8.6b1 released ---

3605.	[port]		win32: Addressed several compatibility issues
			with newer versions of Visual Studio. [RT #33916]

3603.	[bug]		Install <isc/stat.h>. [RT #33956]

3601.	[bug]		Added to PKCS#11 openssl patches a value len
			attribute in DH derive key. [RT #33928]

3600.	[cleanup]	dig: Fixed a typo in the warning output when receiving
			an oversized response. [RT #33910]

3599.	[tuning]	Check for pointer equivalence in name comparisons.
			[RT #18125]

3594.	[maint]		Update config.guess and config.sub. [RT #33816]

3592.	[doc]		Moved documentation of rndc command options to the
			rndc man page. [RT #33506]

3588.	[bug]		dig: addressed a memory leak in the sigchase code
			that could cause a shutdown crash.  [RT #33733]

3587.	[func]		'named -g' now checks the logging configuration but
			does not use it. [RT #33473]

3586.	[buf]		Handle errors in xmlDocDumpFormatMemoryEnc. [RT #33706]

3584.	[security]	Caching data from an incompletely signed zone could
			trigger an assertion failure in resolver.c [RT #33690]

3583.	[bug]		Address memory leak in GSS-API processing [RT #33574]

3581.	[bug]		Changed the tcp-listen-queue default to 10. [RT #33029]

3580.	[bug]		Addressed a possible race in acache.c [RT #33602]

3579.	[maint]		Updates to PKCS#11 openssl patches, supporting
			versions 0.9.8y, 1.0.0k, 1.0.1e [RT #33463]

3578.	[bug]		'rndc -c file' now fails if 'file' does not exist.
			[RT #33571]

3577.	[bug]		Handle zero TTL values better. [RT #33411]

3576.	[bug]		Address a shutdown race when validating. [RT #33573]

3574.	[doc]		The 'hostname' keyword was missing from server-id
			description in the named.conf man page. [RT #33476]

3573.	[bug]		"rndc addzone" and "rndc delzone" incorrectly handled
			zone names containing punctuation marks and other
			nonstandard characters. [RT #33419]
